--- a/styles/layout/_issues.scss
+++ b/styles/layout/_issues.scss
@@ -47,7 +47,7 @@
   }
   &.sm-logo:before {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     margin-right: 5px;
     width: 13px;
     height: 18px;
